--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,13 @@
   max-width: 300px;
   margin: auto;
 }
+.avatar{
+  border-radius: 100%;
+  box-shadow:2px 2px 2px 2px #ccc;
+  width:64px;
+  height:64px;
+  object-fit: cover;
+}
+.card-body{
+  min-height: 193px !important;
+}
